--- a/presentation/present/index.html
+++ b/presentation/present/index.html
@@ -105,7 +105,7 @@
 			  <div style="width:900px;height:500px;border:4px solid #eeeeee;" onclick="createIframe(this, 'http://166.111.206.70:5000');"></div>
 		  </center>
 	  </div>
-	  <p class="em fragment fade-in">
+	  <p class="em2 fragment fade-in">
 		远近视差效果
 	  </p>
 	</section>
