--- a/presentation/present/index.html
+++ b/presentation/present/index.html
@@ -78,14 +78,15 @@
 				<li>AngularJS</li>
 				<li>VideoJS</li>
 				<li>BiliBili Barrage</li>
+				<li>SASS <p class="fragment em2">Life is short, you need SASS! </p></li>
 			</ul>
 		</section>
 
 		<section>
 			<h2 class="em">Backend</h2>
 			<ul>
-				<li>Flask <em>(Python 2.7)</em></li>
 				<li>MongoDB</li>
+				<li>Flask<p class="fragment em2">Life is short, you need Python! </p></li>
 			</ul>
 		</section>
 
