--- a/presentation/present/index.html
+++ b/presentation/present/index.html
@@ -146,7 +146,7 @@
 			  <tr><img src="./img/firefox.jpeg" width=150><tr>
 			  <tr><img src="./img/ie.jpeg" width=150><tr>
 		  </table>
-		  <p class="fragment"><span class="em2">IE&geq;9</span> of course! </p>
+		  <p class="fragment"><span class="em2">IE&geq;9尚有小bug</span></p>
 		</section>
 
 		<section>
